--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #7f7f7f;
     display: grid;
-    grid-template-rows: 10% 80% 10%;
+    grid-template-rows: 7% 16% 80% 7%;
     grid-template-columns: 25% 50% 25%;
     min-height: 100vh;
 }
@@ -13,20 +13,25 @@ header {
     background: rgb(222, 184, 135);
 }
 footer {
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 1 / span 3;
     background: rgb(222, 184, 135);
 }
 main {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 2;
     padding-top: 25px;
 }
 aside {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 3;
     padding-top: 25px;
 }
 .hidden {
     display: none;
 }
+/* .library {
+    display:flex;
+    flex-direction: row;
+
+} */
