--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ footer {
     grid-column: 1 / span 3;
     background: rgb(222, 184, 135);
 }
-main {
+article {
     grid-row: 3;
     grid-column: 2;
     padding-top: 25px;
@@ -30,8 +30,8 @@ aside {
 .hidden {
     display: none;
 }
-/* .library {
-    display:flex;
-    flex-direction: row;
+.library {
+    grid-row: 2 / span 2;
+    grid-column: 1;
 
-} */
+}
